--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
             "email": "grianchan@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+    },
     "require-dev": {
         "phpunit/phpunit": "5.5.*"
     },
